graphpar: Update SUN/113 to new latex

--- a/libraries/graphpar/sun113.tex
+++ b/libraries/graphpar/sun113.tex
@@ -1,556 +1,47 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {113.5}
-\newcommand{\stardocauthors}   {P M Allan\\A J Chipperfield\\D L Terrett}
-\newcommand{\stardocdate}      {19 July 1995}
-\newcommand{\stardoctitle}     {ADAM Graphics Programmer's Guide}
-\newcommand{\stardocversion}   {1.1-6}
-\newcommand{\stardocmanual}    {Programmers' Manual}
-\newcommand{\stardocabstract}  {[Text of abstract]}
+\stardocnumber      {113.5}
+\stardocauthors     {P M Allan\\A J Chipperfield\\D L Terrett}
+\stardocdate        {19 July 1995}
+\stardoctitle       {ADAM Graphics Programmer's Guide}
+\stardocversion     {1.1-6}
+\stardocmanual      {Programmers' Manual}
+\stardocabstract    {%
+This guide outlines the options available to a programmer writing an ADAM
+applications program who wishes to incorporate graphics into the program and
+describes the routines that handle the necessary interaction with the ADAM
+parameter system when a graphics device is opened for a GKS based graphics
+package.
+}
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
+% ? Document specific \providecommand or \newenvironment commands.
 
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-\newcommand{\aster}{$*$}
-\begin{htmlonly}
-  \newcommand{\aster}{*}
-\end{htmlonly}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
+\providecommand{\aster}{$*$}
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\textbf{Abstract}}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-%\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
+\scfrontmatter
 
 \cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+
 
 \section{Introduction}
 
@@ -620,25 +111,24 @@ ADAM program are described in SUN/65.
 \subsection{PGPLOT}
 
 All PGPLOT routines may be used in ADAM applications with the exception of the
-following routines, which must {\em never} be called in ADAM programs :
+following routines, which must \emph{never} be called in ADAM programs :
 \begin{itemize}
 \item \xref{PGBEG}{sun15}{PGBEG}
 \item \xref{PGEND}{sun15}{PGEND}
 \item \xref{PGASK}{sun15}{PGASK}
 \end{itemize}
-The functions of {\tt PGBEG} (and the equivalent obsolete routine {\tt
-PGBEGIN}) are performed by the environment routine
-\htmlref{{\tt PGP\_ASSOC}}{PGP_ASSOC}. The
-environment routines \htmlref{{\tt PGP\_ANNUL}}{PGP_ANNUL},
-\htmlref{{\tt PGP\_CANCL}}{PGP_CANCL} and
-\htmlref{{\tt PGP\_DEACT}}{PGP_DEACT} all call {\tt PGEND},
+The functions of \texttt{PGBEG} (and the equivalent obsolete routine \texttt{PGBEGIN}) are performed by the environment routine
+\htmlref{\texttt{PGP\_ASSOC}}{PGP_ASSOC}. The
+environment routines \htmlref{\texttt{PGP\_ANNUL}}{PGP_ANNUL},
+\htmlref{\texttt{PGP\_CANCL}}{PGP_CANCL} and
+\htmlref{\texttt{PGP\_DEACT}}{PGP_DEACT} all call \texttt{PGEND},
 but should be used as
-described \hyperref{here}{in section~}{}{pgplot} in order to be compatible
+described \slhyperref{here}{in section~}{}{pgplot} in order to be compatible
 with any future
 enhancements to PGPLOT which might separate the action of closing a
 workstation and closing down PGPLOT itself.
 
-{\tt PGASK} controls whether PGPLOT prompts the user for confirmation before
+\texttt{PGASK} controls whether PGPLOT prompts the user for confirmation before
 clearing
 the screen of a graphics device; if used in an ADAM program PGPLOT will bypass
 the parameter system and attempt to read directly from the users terminal. So
@@ -646,26 +136,26 @@ the ``prompt state'' must never be changed from its
 default state ({\tt{'OFF'}} in
 ADAM programs). If prompting is required it is up to the application to keep
 track of when
-\xref{{\tt PGPAGE}}{sun15}{PGPAGE}
+\xref{\texttt{PGPAGE}}{sun15}{PGPAGE}
 will clear the screen and issue its own prompt.
 
 \subsection{SGS}
 
 All SGS routines may be used in ADAM applications with the exception of the
-following routines, which must {\em never} be called in ADAM programs :
+following routines, which must \emph{never} be called in ADAM programs :
 \begin{itemize}
 \item \xref{SGS\_INIT}{sun85}{SGS_INIT}
 \item \xref{SGS\_OPEN}{sun85}{SGS_OPEN}
 \item \xref{SGS\_OPNWK}{sun85}{SGS_OPNWK}
 \item \xref{SGS\_CLOSE}{sun85}{SGS_CLOSE}
 \end{itemize}
-The functions of {\tt SGS\_INIT}, {\tt SGS\_OPEN} and {\tt SGS\_OPNWK} are
-performed by the environment routine \htmlref{{\tt SGS\_ASSOC}}{SGS_ASSOC}.
-The environment routines \htmlref{{\tt SGS\_ANNUL}}{SGS_ANNUL}
-and \htmlref{{\tt SGS\_CANCL}}{SGS_CANCL} dispose of
-resources used in SGS programs.  {\tt SGS\_CLOSE} will be called by the
+The functions of \texttt{SGS\_INIT}, \texttt{SGS\_OPEN} and \texttt{SGS\_OPNWK} are
+performed by the environment routine \htmlref{\texttt{SGS\_ASSOC}}{SGS_ASSOC}.
+The environment routines \htmlref{\texttt{SGS\_ANNUL}}{SGS_ANNUL}
+and \htmlref{\texttt{SGS\_CANCL}}{SGS_CANCL} dispose of
+resources used in SGS programs.  \texttt{SGS\_CLOSE} will be called by the
 environment level SGS de-activation routine
-\htmlref{{\tt SGS\_DEACT}}{SGS_DEACT}.
+\htmlref{\texttt{SGS\_DEACT}}{SGS_DEACT}.
 
 
 \subsection{GKS}
@@ -674,7 +164,7 @@ Subroutines in the `environment level' of the ADAM GKS system have names of
 the form GKS\_x whereas true GKS routines have names of the form Gx.
 
 All GKS routines may be used in ADAM applications with the exception of the
-following routines, which must {\em never} be called in ADAM applications:
+following routines, which must \emph{never} be called in ADAM applications:
 
 \begin{itemize}
 \item GOPKS
@@ -683,12 +173,12 @@ following routines, which must {\em never} be called in ADAM applications:
 \item GCLKS
 \end{itemize}
 
-The functions of {\tt GOPKS} and {\tt GOPWK} are performed by the environment
-level routine \htmlref{{\tt GKS\_ASSOC}}{GKS_ASSOC}. The function of
-{\tt GCLWK} is performed by the routines
-\htmlref{{\tt GKS\_ANNUL}}{GKS_ANNUL} or
-\htmlref{{\tt GKS\_CANCL}}{GKS_CANCL}. The function of {\tt GCLKS}
-is performed by the routine \htmlref{{\tt GKS\_DEACT}}{GKS_DEACT}.
+The functions of \texttt{GOPKS} and \texttt{GOPWK} are performed by the environment
+level routine \htmlref{\texttt{GKS\_ASSOC}}{GKS_ASSOC}. The function of
+\texttt{GCLWK} is performed by the routines
+\htmlref{\texttt{GKS\_ANNUL}}{GKS_ANNUL} or
+\htmlref{\texttt{GKS\_CANCL}}{GKS_CANCL}. The function of \texttt{GCLKS}
+is performed by the routine \htmlref{\texttt{GKS\_DEACT}}{GKS_DEACT}.
 
 \section{Environment Level Routines}
 
@@ -714,8 +204,8 @@ SGS\_DEACT  & De-activate ADAM SGS.\\ \hline
 \end{center}
 
 Here is a skeletal example of a program using SGS :
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE SGSTEST( STATUS )
       ..
       INTEGER STATUS
@@ -740,33 +230,33 @@ Here is a skeletal example of a program using SGS :
 
       CALL SGS_DEACT( STATUS )
 
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
-\htmlref{{\tt SGS\_ASSOC}}{SGS_ASSOC}
+\htmlref{\texttt{SGS\_ASSOC}}{SGS_ASSOC}
 should be the first SGS routine to be called in the application.
 It obtains (via the parameter system) the name of the graphics workstation
 to be used, creates an initial SGS zone on the workstation, and returns an
 SGS zone identifier which can be used in subsequent SGS subroutine calls.
 
-The first argument of {\tt SGS\_ASSOC} is an ADAM program parameter.
+The first argument of \texttt{SGS\_ASSOC} is an ADAM program parameter.
 It should be
 defined to be a graphics device parameter in the interface module for the
 application (see the
-\hyperref{example interface file}{example interface file
+\slhyperref{example interface file}{example interface file
 in section}{}{ifl}). The value of
 this parameter should be the name of a workstation as defined by GNS (see
 \xref{SUN/57}{sun57}{GKSWorkstationNames}).
 
 The second argument is the access mode required. This can be one of :
 \begin{description}
-\item[{\tt 'READ'}] The application is only going to `read' from the workstation
-({\em i.e.}\ perform cursor or similar operations).
+\item[\texttt{'READ'}] The application is only going to `read' from the workstation
+(\emph{i.e.}\ perform cursor or similar operations).
 Screens will not be cleared when vdu workstations are opened.
-\item[{\tt 'WRITE'}] The application is going to `write' on the workstation,
-{\em i.e.}\ actually do some graphics.
+\item[\texttt{'WRITE'}] The application is going to `write' on the workstation,
+\emph{i.e.}\ actually do some graphics.
 Workstations are completely initialized when they are opened.
-\item[{\tt 'UPDATE'}] The application will modify the graphics on the
+\item[\texttt{'UPDATE'}] The application will modify the graphics on the
 workstation.
 Screens will not be cleared when vdu workstations are opened.
 \end{description}
@@ -780,14 +270,14 @@ The fourth argument is the usual status value. It follows the ADAM error
 strategy as described in \xref{SUN/104}{sun104}{}.
 
 When the application has finished using the workstation, it should be closed
-using \htmlref{{\tt SGS\_CANCL}}{SGS_CANCL} unless it is
+using \htmlref{\texttt{SGS\_CANCL}}{SGS_CANCL} unless it is
 required to keep the parameter active
 (to update a global parameter for example), in which case
-\htmlref{{\tt SGS\_ANNUL}}{SGS_ANNUL}
+\htmlref{\texttt{SGS\_ANNUL}}{SGS_ANNUL}
 should be used.
 
 When the application has finished using SGS, it should be de-activated by
-calling \htmlref{{\tt SGS\_DEACT}}{SGS_DEACT}.
+calling \htmlref{\texttt{SGS\_DEACT}}{SGS_DEACT}.
 
 \subsection{PGPLOT routines\label{pgplot}\xlabel{pgplot}}
 
@@ -806,8 +296,8 @@ PGP\_DEACT  & De-activate ADAM PGPLOT.\\ \hline
 \end{center}
 
 Here is a skeletal example of a program using PGPLOT :
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE PGPTEST( STATUS )
       ..
       INTEGER STATUS
@@ -831,36 +321,35 @@ Here is a skeletal example of a program using PGPLOT :
       ..
 
       CALL PGP_DEACT( STATUS )
-
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 Note the close similarity with the SGS skeleton program.
-\htmlref{{\tt PGP\_ASSOC}}{PGP_ASSOC} should be
+\htmlref{\texttt{PGP\_ASSOC}}{PGP_ASSOC} should be
 the first PGPLOT routine called in the application. It obtains (via the
 parameter system) the name of the graphics workstation  to be used, opens the
 workstation, and returns a PGPLOT unit number. PGPLOT only supports one
 graphics device open at one time so this unit number is always returned as
-one\footnote{\xref{{\tt PGBEG}}{sun15}{PGBEG} has a similar redundant argument so that if, one day,
+one\footnote{\xref{\texttt{PGBEG}}{sun15}{PGBEG} has a similar redundant argument so that if, one day,
 PGPLOT is extended to support multiple devices, existing programs would not
 have to be changed.}.
 
-The first, second and last arguments of {\tt PGP\_ASSOC} are the same as the
-corresponding arguments of {\tt SGS\_ASSOC}.
+The first, second and last arguments of \texttt{PGP\_ASSOC} are the same as the
+corresponding arguments of \texttt{SGS\_ASSOC}.
 
 The third and fourth arguments are the number of sub-plots per page in X and Y
-(c.f.\ \xref{{\tt PGBEG}}{sun15}{PGBEG}).
+(c.f.\ \xref{\texttt{PGBEG}}{sun15}{PGBEG}).
 
 The fifth argument is the unit identifier returned to the application.
 
 When the application has finished using the workstation, it should be closed
-using \htmlref{{\tt PGP\_CANCL}}{PGP_CANCL}
+using \htmlref{\texttt{PGP\_CANCL}}{PGP_CANCL}
 unless it is required to keep the parameter active
 (to update a global parameter for example), in which case
-\htmlref{{\tt PGP\_ANNUL}}{PGP_ANNUL} should be used.
+\htmlref{\texttt{PGP\_ANNUL}}{PGP_ANNUL} should be used.
 
 When the application has finished using PGPLOT, it should be de-activated by
-calling \htmlref{{\tt PGP\_DEACT}}{PGP_DEACT}.
+calling \htmlref{\texttt{PGP\_DEACT}}{PGP_DEACT}.
 
 \subsection{GKS routines\xlabel{gks}}
 
@@ -882,8 +371,8 @@ GKS\_GSTAT  & Inquire whether GKS has reported an error
 \end{center}
 
 Here is a skeletal example of a program using GKS :
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE GKSTEST( STATUS )
       ..
       INTEGER STATUS
@@ -907,34 +396,34 @@ Here is a skeletal example of a program using GKS :
       ..
 
       CALL GKS_DEACT( STATUS )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 Note the close similarity with the SGS skeleton program.
-\htmlref{{\tt GKS\_ASSOC}}{GKS_ASSOC} should be
+\htmlref{\texttt{GKS\_ASSOC}}{GKS_ASSOC} should be
 the first GKS routine to be called in the application. It obtains (via the
 parameter system) the name of the graphics workstation to be used, opens it,
 and returns a GKS workstation identifier which can be used in subsequent GKS
 subroutine calls.
 
-The notes in the previous section on the arguments of {\tt SGS\_ASSOC}
+The notes in the previous section on the arguments of \texttt{SGS\_ASSOC}
  apply equally
-well to {\tt GKS\_ASSOC} with the exception that the third argument is a GKS
+well to \texttt{GKS\_ASSOC} with the exception that the third argument is a GKS
 workstation identifier rather than an SGS zone identifier.
 
 The workstation is closed using
-\htmlref{{\tt GKS\_ANNUL}}{GKS_ANNUL} or
-\htmlref{{\tt GKS\_CANCL}}{GKS_CANCL}
+\htmlref{\texttt{GKS\_ANNUL}}{GKS_ANNUL} or
+\htmlref{\texttt{GKS\_CANCL}}{GKS_CANCL}
 when the application has finished using it.
 
 When the application has finished using GKS, it should be de-activated by
-calling \htmlref{{\tt GKS\_DEACT}}{GKS_DEACT}.
+calling \htmlref{\texttt{GKS\_DEACT}}{GKS_DEACT}.
 
 \section{Interface Files}
 \label{ifl}
 A simple interface file for the above SGS example would be:
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ## SGSTEST - Test some SGS, PGPLOT or GKS graphics functions
 
 interface SGSTEST
@@ -950,8 +439,8 @@ interface SGSTEST
    endparameter
 
 endinterface
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 The same interface file can be used with the PGPTEST and GKSTEST programs if
 the line saying `interface SGSTEST' is replaced by the line `interface
@@ -962,44 +451,37 @@ PGPTEST' or `interface GKSTEST.
 The PGPLOT, SGS and GKS parameter routines conform to the Starlink error
 reporting and inherited status strategy described in \xref{SUN/104}{sun104}{}.
 Error reports will generally be of the form:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ROUTINE_NAME: Text
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 but where there routine name is not useful, it will be omitted.
 
 If it is required to test for particular status values, symbolic names should
 be used. They can be defined by including in the application, the statements:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 INCLUDE 'SAE_PAR'   ! To define SAI__OK etc.
 INCLUDE 'SGS_ERR'   ! To define the SGS__ error values
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 for SGS program, or the statements:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 INCLUDE 'SAE_PAR'   ! To define SAI__OK etc.
 INCLUDE 'PGP_ERR'   ! To define the GKS__ error values
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
-for PGPLOT programs\begin{quote}
+for PGPLOT programs
 
-\begin{verbatim}
+\begin{terminalv}
 INCLUDE 'SAE_PAR'   ! To define SAI__OK etc.
 INCLUDE 'GKS_ERR'   ! To define the GKS__ error values
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 for GKS programs. It is of course possible to include PGPLOT, SGS and GKS
 status values in a single program.
 
-The symbolic names are listed in \hyperref{here}{Section~}{}{errs}.
+The symbolic names are listed in \slhyperref{here}{Section~}{}{errs}.
 
 A substitute GKS error handling routine is linked with ADAM applications so
 that error messages are reported in conformance with the Starlink error
@@ -1008,15 +490,15 @@ inherited status strategy. Thus programs which use GKS must be very careful
 about handling error conditions if they are to avoid generating streams
 of unhelpful error messages.
 
-Subroutine \htmlref{{\tt GKS\_GSTAT}}{GKS_GSTAT}
+Subroutine \htmlref{\texttt{GKS\_GSTAT}}{GKS_GSTAT}
  has been provided by the environment to help with this problem.
 If this routine is called after every non-environment GKS routine
 (or sequence of routine calls) then the
 net effect is as if the GKS routine(s) did have an inherited status argument.
 
 Note that for stand alone GKS routines which do have a status argument, the
-environment status variable should {\em not} be used. Use a local variable,
-ignore its value and use {\tt GKS\_GSTAT} to get an environment status value
+environment status variable should \emph{not} be used. Use a local variable,
+ignore its value and use \texttt{GKS\_GSTAT} to get an environment status value
 for the
 routine. Liberal use of IF .. THEN .. ELSE .. ENDIF structures testing the
 environment status value is recommended to prevent invalid output from GKS and
@@ -1030,8 +512,8 @@ This means that an application that detects an error from an enquiry routine
 must compose and report a suitable message as well as setting the ADAM status
 
 Example :\nopagebreak
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 
       SUBROUTINE GKSTEST(STATUS)
 
@@ -1075,14 +557,14 @@ Example :\nopagebreak
 
       CALL GKS_DEACT( STATUS )
       END
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 
 \section{Compiling and Linking}
 
-Graphics programs are linked by including {\tt `pgp\_link\_adam`},
-{\tt `sgs\_link\_adam`} or {\tt `gks\_link\_adam`} as appropriate on
+Graphics programs are linked by including \texttt{`pgp\_link\_adam`},
+\texttt{`sgs\_link\_adam`} or \texttt{`gks\_link\_adam`} as appropriate on
 the alink command line.
 
 \section{Status Values}
@@ -1186,8 +668,8 @@ GKS\_\_DVERR     & Workstation name not defined by GNS
       \sstsubsection{
          MODE = CHARACTER\aster(\aster) (Given)
       }{
-         Expression specifying the access mode -  {\tt '}READ{\tt '}, {\tt '}WRITE{\tt '}
-         or {\tt '}UPDATE{\tt '}, as appropriate.
+         Expression specifying the access mode -  \texttt{'}READ\texttt{'}, \texttt{'}WRITE\texttt{'}
+         or \texttt{'}UPDATE\texttt{'}, as appropriate.
       }
       \sstsubsection{
          WKID = INTEGER (Returned)
@@ -1352,9 +834,9 @@ GKS\_\_DVERR     & Workstation name not defined by GNS
          MODE = CHARACTER\aster(\aster) (Given)
       }{
          Expression specifying the access mode.
-         If it is {\tt '}READ{\tt '} or {\tt '}UPDATE{\tt '}, a vdu workstation screen
+         If it is \texttt{'}READ\texttt{'} or \texttt{'}UPDATE\texttt{'}, a vdu workstation screen
          will not be cleared when the workstation is opened.
-         If it is {\tt '}WRITE{\tt '}, the screen will be cleared as usual.
+         If it is \texttt{'}WRITE\texttt{'}, the screen will be cleared as usual.
       }
       \sstsubsection{
          NX = INTEGER (Given)
@@ -1503,9 +985,9 @@ GKS\_\_DVERR     & Workstation name not defined by GNS
          MODE = CHARACTER\aster(\aster) (Given)
       }{
          Expression specifying the access mode.
-         If it is {\tt '}READ{\tt '} or {\tt '}UPDATE{\tt '}, a vdu workstation screen
+         If it is \texttt{'}READ\texttt{'} or \texttt{'}UPDATE\texttt{'}, a vdu workstation screen
          will not be cleared when the workstation is opened.
-         If it is {\tt '}WRITE{\tt '}, the screen will be cleared as usual.
+         If it is \texttt{'}WRITE\texttt{'}, the screen will be cleared as usual.
       }
       \sstsubsection{
          ZONE = INTEGER (Returned)
