hds: fix figure1 in sun92

--- a/libraries/hds/sun92.tex
+++ b/libraries/hds/sun92.tex
@@ -96,6 +96,7 @@ hierarchical way HDS stores data within files and the way that a
 filing system organises the files themselves. These analogies will be
 helpful in what follows.
 
+\setlength{\unitlength}{1mm}
 \begin{figure}
 \label{fig:hierarchy}
 \caption{The relationship between a computer's filing system and HDS.}
