kaplibs: SUN/238 updated
Appendix P does not seem to be built at the moment by make_sun238.csh

--- a/libraries/kaplibs/sun_mid.tex
+++ b/libraries/kaplibs/sun_mid.tex
@@ -1,9 +1,8 @@
 
-  \normalsize
-\end{latexonly}
+\end{small}
 
 \newpage
 \section{\xlabel{ro_full}Routine Descriptions\label{ro:full}}
 
-\small
+\begin{small}
 
