--- a/libraries/kaplibs/sun_head.tex
+++ b/libraries/kaplibs/sun_head.tex
@@ -1,19 +1,19 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt]{starlink}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {238.9}
-\newcommand{\stardocauthors}   {D.S. Berry \\Malcolm J. Currie}
-\newcommand{\stardocdate}      {2014 June 9}
-\newcommand{\stardoctitle}     {KAPLIBS -- Internal subroutines used within
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {238.9}
+\stardocauthors     {D.S. Berry \\Malcolm J. Currie}
+\stardocdate        {2014 June 9}
+\stardoctitle     {KAPLIBS -- Internal subroutines used within
                                 the KAPPA package.}
-\newcommand{\stardocversion}   {Version 3.5}
-\newcommand{\stardocmanual}    {Programmer's Reference}
-\newcommand{\stardocabstract}  {KAPLIBS is a package of Fortran subroutine
+\stardocversion     {Version 3.5}
+\stardocmanual      {Programmer's Reference}
+\stardocabstract  {KAPLIBS is a package of Fortran subroutine
 libraries which were originally written as part of the KAPPA package (a
 package of general-purpose image-processing and visualization tools).
 KAPLIBS provides software developers with access to many of the internal
@@ -21,613 +21,22 @@ KAPPA routines, so that KAPPA-like applications can be written and built
 independently of KAPPA.}
 
 % ? End of document identification
-
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\latexonlysection}[1]{\section{#1}}
-\newcommand{\latexonlysubsection}[1]{\subsection{#1}}
-\newcommand{\latexonlysubsubsection}[1]{\subsubsection{#1}}
-\begin{htmlonly}
-   \newcommand{\latexonlysection}[1]{#1}
-   \newcommand{\latexonlysubsection}[1]{#1}
-   \newcommand{\latexonlysubsubsection}[1]{#1}
-\end{htmlonly}
-\newcommand{\st}[1]{{\em{#1}}}
-\newcommand{\hi}[1]{{\tt{#1}}}
-\newcommand{\latexelsehtml}[2]{#1}
-\begin{htmlonly}
-  \newcommand{\latexelsehtml}[2]{#2}
-\end{htmlonly}
+% ? Document specific \providecommand or \newenvironment commands.
+\providecommand{\st}[1]{{\emph{#1}}}
+\providecommand{\hi}[1]{{\texttt{#1}}}
+\providecommand{\latexelsehtml}[2]{#1}
 
 % Command for displaying routines in routine lists:
 % =================================================
 
-\newcommand{\noteroutine}[2]{{\small{\bf{#1}}}\nopagebreak\\
+\providecommand{\noteroutine}[2]{{\small{\textttbf{#1}}}\nopagebreak\\
                              \hspace*{3em}\st{#2}\\[1.5ex]}
-\begin{htmlonly}
-   \newcommand{\noteroutine}[2]{{\small{\bf{#1}}}\\
-                                  --- \st{#2}\\[1.0ex]}
-\end{htmlonly}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The commands defined in the style file html.sty provided with LaTeX2html
-%     are used. These should either be made available by using the appropriate
-%     sun.tex (with hypertext extensions) or by putting the file html.sty
-%     on your TEXINPUTS path (and including the name as part of the
-%     documentstyle declaration).
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-%     MJC: Malcolm J. Currie (STARLINK)
-%     DSB: David Berry (STARLINK)
-%     TIMJ: Tim Jenness (JAC)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     1995 October 4 (MJC):
-%        Added goodbreaks and pagebreak[3] in various places to improve
-%        pages breaking before headings, not immediately after.
-%        Corrected banner width.
-%     1996 March 7 (MJC):
-%        Mark document name on both sides of an sstroutine.
-%     2-DEC-1998 (DSB):
-%        Added sstattributetype (copied from sun210.tex).
-%     2004 August 6 (MJC):
-%        Added sstattribute.
-%     21-JUL-2009 (TIMJ):
-%        Added \sstdiylist{}{} as used when a Parameters section is located that
-%        is not "ADAM Parameters".
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \markboth{{\stardocname}~ --- #1}{{\stardocname}~ --- #1}
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-% Frame attributes fount.  Need to find a way for these to stand out.
-% San serif doesn't work by default.  Also without the \rm the
-% san serif continues after \sstatt hyperlinks.  Extra braces
-% failed to prevent \sstattribute from using roman fount for its
-% headings.  The current lash up appears to work, but needs further
-% investigation or a TeX wizard.
-\newcommand{\sstatt}[1]{\sf #1}
-\begin{htmlonly}
-  \newcommand{\sstatt}[1]{\large{\tt #1}}
-\end{htmlonly}
-
-%  Define a command to produce an attribute header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstattribute}[3]{
-   \goodbreak
-   \markboth{{\stardocname}~ --- #1}{{\stardocname}~ --- #1}
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\sstatt #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-4.9pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\sstatt #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\sstatt #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\goodbreak \item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the attribute data type section.
-\newcommand{\sstattributetype}[1]{
-   \item[Type:] \mbox{} \\
-      #1
-}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \goodbreak
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the applicability section.
-\newcommand{\sstapplicability}[1]{
-   \item[Class Applicability:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \goodbreak
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\goodbreak \item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the a generic section as a list
-\newcommand{\sstdiylist}[2]{
-   \item[#1:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #2
-   \end{description}
-}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%  Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstattribute. Note the further level of subsectioning.
-   \newcommand{\sstattribute}[3]{
-      \subsubsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-      \\
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstapplicability
-   \newcommand{\sstapplicability}[1]{%
-      \item[Class Applicability:]
-       \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2\\}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of sst.tex layout definitions.
-%.
-
-
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\renewcommand{\thepage}{\roman{page}}
+
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
- \newpage
- \begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \latexonlytoc
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section {Introduction}
 
@@ -686,21 +95,21 @@ purpose. The source code for KAPPA is available from the source code
 repository at \htmladdnormallink{https://github.com/Starlink/starlink}{https://github.com/Starlink/starlink}.
 
 Applications within KAPPA are split up into several groups (called
-``monoliths'), with names such as {\tt kapview}, {\tt ndfpack} and
+``monoliths'), with names such as \texttt{kapview}, \texttt{ndfpack} and
 (rather confusingly but at one time the only KAPPA monolith)
-{\tt kappa}. The top-level routines for the
-applications in monolith {\tt xyz} are in the tar file {\tt
+\texttt{kappa}. The top-level routines for the
+applications in monolith \texttt{xyz} are in the tar file \texttt{
 \$KAPPA\_DIR/xyz\_sub.tar}. Each application may use some
 application-specific subroutines (\emph{i.e.} subroutines which are so
 closely related to the purpose of a single application that they are not
 deemed as ``generally useful''). These will be denoted by subroutines
-names with prefix ``{\tt KPS1\_}'' and will be contained within the tar
-file {\tt \$KAPPA\_DIR/kapsub\_sub.tar}.
+names with prefix ``\texttt{KPS1\_}'' and will be contained within the tar
+file \texttt{\$KAPPA\_DIR/kapsub\_sub.tar}.
 
 \section{Naming Conventions}
-Each subroutine within KAPLIBS has a name of the form {\tt <prefix>\_<name>}
-where {\tt <prefix>} is a prefix indicating which KAPPA library the
-routine belongs to, and {\tt <name>} is a unique name for the routine.
+Each subroutine within KAPLIBS has a name of the form \texttt{<prefix>\_<name>}
+where \texttt{<prefix>} is a prefix indicating which KAPPA library the
+routine belongs to, and \texttt{<name>} is a unique name for the routine.
 The prefix associated with each KAPPA library indicates something of the
 purpose of that library. The following prefixes are currently included
 within KAPLIBS:
@@ -712,7 +121,7 @@ values or temporary work space. They are gradually being replaced within
 KAPPA by more modern routines provided by the PAR and PSX libraries.
 
 \item [FTS1\_] These are routines used to access FITS files and headers -
-KAPPA's own {\tt fitsio}.
+KAPPA's own \texttt{fitsio}.
 
 \item [IRA\_] These routines were initially part of the IRAS90 Astrometry
 library (hence the IRA acronym). They are used to gain access to WCS
@@ -728,11 +137,11 @@ associations:
 
 \begin{itemize}
 \item Routines associated with use of the PGPLOT graphics package usually
-have names which start ``{\tt KPG1\_PG}''.
+have names which start ``\texttt{KPG1\_PG}''.
 \item Routines associated with use of the AGI graphics database usually
-have names which start ``{\tt KPG1\_GD}''.
+have names which start ``\texttt{KPG1\_GD}''.
 \item Routines associated with accessing or using WCS information usually
-have names which start ``{\tt KPG1\_AS}''.
+have names which start ``\texttt{KPG1\_AS}''.
 \end{itemize}
 
 \end{description}
@@ -764,13 +173,13 @@ numerical types. The \emph{actual} routines names will not include the trailing
 To compile and link an application with the KAPLIBS package, the following
 commands should be used (see \xref{SUN/144}{sun144}{}):
 
-\small
-\begin{verbatim}
-      % alink adamprog.f `kaplibs_link_adam`
-\end{verbatim}
-\normalsize
+\begin{small}
+\begin{terminalv}
+% alink adamprog.f `kaplibs_link_adam`
+\end{terminalv}
+\end{small}
 
-Note the use of {\em opening} apostrophes (`) rather than the more common
+Note the use of \emph{opening} apostrophes (`) rather than the more common
 closing apostrophe (')\footnote{Currently, the parameter handling
 routines within KAPLIBS have not been separated out, and so it is not
 currently possible to link stand-alone (\emph{i.e.} ``non-Adam'')
@@ -784,14 +193,14 @@ removed by the \verb+kaplibs_dev remove+ command.
 \subsection{Linking with Native PGPLOT}
 The commands described above will link the application with the Starlink
 GKS version of the \xref{PGPLOT graphics library}{sun15}{}. If you wish
-to link with the {\em native} version of PGPLOT, then include the switch
+to link with the \emph{native} version of PGPLOT, then include the switch
 ``-nogks'' as follows:
 
-\small
-\begin{verbatim}
-      % alink adamprog.f `kaplibs_link_adam -nogks`
-\end{verbatim}
-\normalsize
+\begin{small}
+\begin{terminalv}
+% alink adamprog.f `kaplibs_link_adam -nogks`
+\end{terminalv}
+\end{small}
 
 This will include native PGPLOT in the link list, and cause all GKS and IDI
 related items to be removed.
@@ -845,7 +254,7 @@ related items to be removed.
       returns the number of bytes for a given numeric HDS data type.
 \item Routine KPG1\_BADBX now has an extra argument that indicates how the
       calculated bounding box should be used.
-\item Routine KPG1\_ASSET now allows the new pseudo-attribute {\tt TEXTMARGIN}
+\item Routine KPG1\_ASSET now allows the new pseudo-attribute \texttt{TEXTMARGIN}
       to be used to specify a margin to clear around a text string. The
       value of the attribute gives the width of the margin in units of the
       text height.
@@ -897,9 +306,9 @@ related items to be removed.
 BAD2Dx  & \multicolumn{2}{l}{KPG\_FISEx setting the fill value to VAL\_\_BADx} \\
 CHVALx  & \multicolumn{2}{l}{KPG1\_CHVAx} \\
 COPAx   & \multicolumn{2}{l}{VEC\_xTOx or KPG1\_COPY} \\
-COPY1D  & {\tt "}   & {\tt "}  \\
-COPY2D  & {\tt "}   & {\tt "}  \\
-COPY3D  & {\tt "}   & {\tt "}  \\
+COPY1D  & \texttt{"}   & \texttt{"}  \\
+COPY2D  & \texttt{"}   & \texttt{"}  \\
+COPY3D  & \texttt{"}   & \texttt{"}  \\
 CPSECR  & \multicolumn{2}{l}{KPG1\_CPNDx} \\
 CREOUT  & \multicolumn{2}{l}{NDF\_CREP and NDF\_CPUT} \\
 ELNMBx  & \multicolumn{2}{l}{KPG1\_ELNMx} \\
@@ -930,10 +339,10 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
       VAL\_\_BADD for each undefined statistic.
 \item Support for FITS tapes was removed from FTS1\_PHEAD, FTS1\_RDATA,
       FTS1\_RGRDA, FTS1\_RSTAB, FTS1\_SKIP.  Argument MEDIUM in these
-      routines now only accepts the value {\tt DISK}.
+      routines now only accepts the value \texttt{DISK}.
 
-\item Config files can now include {\tt <def>} to revert to the default value.
-\item Config files can now include {\tt <undef>} to store an undefined
+\item Config files can now include \texttt{<def>} to revert to the default value.
+\item Config files can now include \texttt{<undef>} to store an undefined
       value using kpg1Kymap.
 \end{itemize}
 
@@ -962,7 +371,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
       the pixel or WCS shape of a given template NDF.
 \item KPG1\_KYMAP can read vectors as well as scalars from a GRP
       group into an AST keyMap.
-\item {\tt kaplibs\_link} script now works without attempting to load ADAM
+\item \texttt{kaplibs\_link} script now works without attempting to load ADAM
       symbols.
 \item Can now be built as a shared library.
 \item Added KPG1\_ASTCMN to provide access to KPG\_AST private common block
@@ -1051,11 +460,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
       textual representations of NDF Quality bits.
 \end{itemize}
 
-\begin{latexonly}
-  \newpage
-  \latexonlysection{Alphabetical List of Routines}
-  \small
+\newpage
+\section{Alphabetical List of Routines}
 
-
-
-
+\begin{small}
