ems: fix figure2 in ssn4.tex

--- a/libraries/ems/ssn4.tex
+++ b/libraries/ems/ssn4.tex
@@ -45,6 +45,7 @@ ignored by applications programmers and users.}
 % -----------------------------------------------------------------------------
 % ? Document specific \providecommand or \newenvironment commands.
 \providecommand{\listline}{\hspace{1pt}\\}
+\setlength{\unitlength}{1mm}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
