--- a/libraries/irq/sun261.tex
+++ b/libraries/irq/sun261.tex
@@ -606,9 +606,9 @@ STATUS~)}
       not reserve a bit in the QUALITY component for the new quality
       name, it mearly established a default value for the quality which
       will be used for all pixels in the NDF if no subsequent call to
-      \htmlref{IRQ\_SETQC}{IRQ_SETQC} is made. Note, the string \texttt{ANY}
-      cannot be used as a quality name. Also, quality names may not contain
-      any full stops.
+      \htmlref{IRQ\_SETQL}{IRQ_SETQL} or \htmlref{IRQ\_SETQM}{IRQ_SETQM}
+      is made. Note, the string \texttt{ANY} cannot be used as a quality
+      name. Also, quality names may not contain any full stops.
 
       An error is reported if only READ access is available to the NDF.
    }
