kaplibs: No need for a separate alphabetical list in sun238

--- a/libraries/kaplibs/sun_head.tex
+++ b/libraries/kaplibs/sun_head.tex
@@ -461,6 +461,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
 \end{itemize}
 
 \newpage
-\section{Alphabetical List of Routines}
+\section{\xlabel{ro_full}Routine Descriptions\label{ro:full}}
 
 \begin{small}
+
