--- a/applications/latexsupport/sst.sty
+++ b/applications/latexsupport/sst.sty
@@ -170,5 +170,6 @@
 \newcommand{\sstarguments}[1]{\sstdiytopic{Arguments}{#1}}
 \newcommand{\sstinvocation}[1]{\sstdiytopic{Invocation}{\texttt{#1}}}
 \newcommand{\sstreturnedvalue}[1]{\sstdiytopic{Returned Value}{#1}}
+\newcommand{\sstimplementation}[1]{\sstdiytopic{Implementation}{#1}}
 
 %\renewcommand{\backslash}{\textbackslash}
