--- a/applications/latexsupport/starstyle.sty
+++ b/applications/latexsupport/starstyle.sty
@@ -150,6 +150,7 @@
 
 
 \newcommand{\Abstract}{%
+  \ifwithabs
     \ifwithchapters
         \chapter*{}
     \fi
@@ -162,6 +163,7 @@
     \\
     {\small\thestardoccopyright{}}
     \clearpage
+  \fi
 }
 
 
